syntax = "proto3";

package logsPackage;

service logsService {
    rpc getReport (ReportRequest) returns (ReportResponse) {}
  }

  message ReportRequest {
    string id = 1;
  }

  message ReportResponse {
    string reportData = 1;
  }
